--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                      <h3 class="mb-0"><a href="                                                    " target="_blank">Does it Matter Where and What I Study? Evidence from the Oil Price Crash in Canada</a></h3>
+                      <h3 class="mb-0"><a href="Pascuel.github.io/Canada_oil.pdf" target="_blank">Does it Matter Where and What I Study? Evidence from the Oil Price Crash in Canada</a></h3>
                       <div class="subheading mb-0">with <a class="hlinknames" href="https://economics.harvard.edu/people/maria-constanza-abuin" target="_blank">Constanza Abuin</a></div> 
                        Last update: October 2021
                        <p style="margin:0;"> </p>
