--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                     </div>
                     <p class="lead mb-5">I am a PhD candidate at the Vancouver School of Economics, University of British Columbia. My research interests are in labour economics and development economics, and applied econometrics. You can find my CV <a href="Academic_CV_Pascuel_Plotkin" target="_blank"> here </a></p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://twitter.com/mpplotkin"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="https://scholar.google.ca/citations?user=GUblEwcAAAAJ&hl=en&oi=ao"><i class="fab fa-google"></i></a>
+                        <a class="social-icon" href="https://twitter.com/mpplotkin" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://scholar.google.ca/citations?user=GUblEwcAAAAJ&hl=en&oi=ao" target="_blank"><i class="fab fa-google"></i></a>
                     </div>
                 </div>
             </section>
