--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="google-site-verification" content="CMvDfI4Xts6MpV0tUmCwM0TNacTkrU4Wp6RkQuyuxyo" />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Webpage of Pascuel Plotkin. I am a PhD candidate at the Vancouver School of Economics, University of British Columbia. My research interests are in labour economics and development economics, and applied econometrics.">
