--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <h2 class="mb-5">Working Papers</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><a href="https://economics.mit.edu/files/19267" target="_blank">Paying Outsourced Labor: Direct Evidence form Linked Temp Agency-Worker-Client Data</a></h3>
+                            <h3 class="mb-0"><a href="rest_a_01037.pdf" target="_blank">Paying Outsourced Labor: Direct Evidence form Linked Temp Agency-Worker-Client Data</a></h3>
                             <div class="subheading mb-0">with <a class="hlinknames" href="http://www.andresdrenik.com/" target="_blank">Andres Drenik</a>, <a class="hlinknames" href="https://economics.mit.edu/faculty/sjaeger" target="_blank">Simon Jäger</a> and <a class="hlinknames" href="https://eml.berkeley.edu/~schoefer/" target="_blank">Benjamin Schoefer</a></div>
                             <b>Review of Economics and Statistics</b>, Forthcoming
                             <p style="margin:0;"> </p>
