--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#jmp">Job Market Paper</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#papers">Publications</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#workingpapers">Working Papers</a></li>
                 </ul>
@@ -143,6 +144,25 @@
                     </div>
                 </div>
             </section>
+
+
+            <hr class="m-0" />
+            <!-- Job Market Paper-->
+            <section class="resume-section" id="jmp">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Job Market Paper</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0"><a href="jmp.pdf" target="_blank">Dinner at Your Door: How Delivery Platforms Affect Workers and Firms</a></h3>
+                            <b>(Draft coming soon)</b>
+                            <p style="margin:0;"> </p>
+                            <div class="topnav"> <a href="javascript:void();" onclick="toggle_visibility('foo_flour');"> [Show/hide abstract]</a>
+                              <div id="foo_flour" style="display:none"> <div align="justify"> This paper studies the impacts of online-delivery platforms on workers and firms. I leverage unique data that allows to link restaurants and workers' performance on a large platform in Brazil with employer-employee data. I exploit the staggered roll-out of a large online-delivery platform in Brazil and use a matched event-study design to estimate the effects of online-delivery platforms on restaurant labor demand and workers labor market outcomes. I find that the average restaurant that adopts an online-delivery platform substitutes one-to-one in-house waiters for outsourced platform workers. Restaurants that do not adopt the platform are more likely to close and decrease their size. These effects impact the earnings and employment of restaurant workers over time. However, when considering the impact of the platform on gig workers, the earnings gains from gig workers outweigh the losses of restaurant workers. The evidence presented in this paper highlights who are the winners and losers of online-delivery platforms.</div></div>
+                              <p></p>
+                          </div>
+                        </div>
+            </section>  
+
 
             <hr class="m-0" />
             <!-- Publications-->
@@ -171,7 +191,6 @@
 
             <!-- Working Papers-->
             <hr class="m-0" />
-            <!-- Publications-->
             <section class="resume-section" id="workingpapers">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Working Papers</h2>
