--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#jmp">Job Market Paper</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#papers">Publications</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#workingpapers">Working Papers</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#workinprogress">Work in Progress</a></li>
                 </ul>
             </div>
         </nav>
@@ -229,6 +230,28 @@
                     </div>
                   </div>
             </section>  
+
+            <!-- Work in Progress-->
+            <hr class="m-0" />
+            <section class="resume-section" id="workinprogress">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Work in Progress</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0"><a href="" target="_blank">Labor Supply of the Gig Economy: Evidence From the Online-Delivery Industry in Brazil</a></h3>
+                            <div class="subheading mb-0">with <a class="hlinknames" href="https://ninaroussille.github.io/" target="_blank">Nina Roussille</a> and <a class="hlinknames" href="https://sites.google.com/view/gabriel-ulyssea" target="_blank">Gabriel Ulyssea</a></div>
+                            Awarded J-PAL JOI Brazil Pilot Grant, 2023
+                            <p style="margin:0;"> </p>
+                             <div class="topnav"> <a href="javascript:void();" onclick="toggle_visibility('foo_fl_look');"> [Show/hide abstract]</a>
+                            </div>
+                           <p> </p>
+                           <p> </p>
+                             <div id="foo_fl_look" style="display:none"> <div align="justify"> This project investigates in detail the labor supply of gig workers and the role of information frictions in shaping labor supply of these workers in Brazil. For that, we combine administrative data from the largest food delivery platform in Latin America, with primary survey data from a sample of riders in the platform. Previous studies on labor supply have assumed that workers have a full knowledge of the wage distribution and form expectations rationally. Yet in the context of gig employment where earnings present a high volatility, it is possible that workers form inaccurate expectations. In this project we overcome this constraint by surveying a sample of platform workers to elicit their reservation wages and expected wages. We first document the error in workers beliefs, contrasting survey data and administrative records. We then move on to an experimental research design where we expose workers to unbiased information on expected wages and study how they update their beliefs and behavior on the platform. By linking the experimental research design with platforms administrative records and employer-employee data, we study how unbiased information can potentially modify labor supply decisions and adjust labor allocation in a more efficient way - as measured by the surplus generated between the actual earnings in the platform and workers reservation wages. </div></div>
+                             <p></p>
+                         </div>
+                       </div>
+                  </div>
+            </section>              
           
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
