--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                   </h1>
                   <div class="subheading mb-5">
                       6000 iona drive · vancouver, bc v6t1l4 ·
-                      <a href="mailto:name@email.com">pascuel1@student.ubc.ca</a>
+                      <a href="mailto:pascuel1@student.ubc.ca">pascuel1@student.ubc.ca</a>
                   </div>
                   <p class="lead mb-5">I am a PhD candidate at the Vancouver School of Economics, University of British Columbia. My research interests are labor and development economics. Much of my research examines how alternative work arrangements affect inequality, workers and firms. You can find my CV <a href="Academic_CV_Pascuel_Plotkin.pdf" target="_blank">here.</a></p>
                   
