--- a/index.html
+++ b/index.html
@@ -250,6 +250,19 @@
                              <p></p>
                          </div>
                        </div>
+                       <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0"><a href="" target="_blank">Algorithmic v.s. Human Bias in Hiring</a></h3>
+                            <div class="subheading mb-0">with <a class="hlinknames" href="https://www.samgyetvay.com/" target="_blank">Sam Gyetvay</a> and Choenden Kyirong</a></div>
+                            <p style="margin:0;"> </p>
+                             <div class="topnav"> <a href="javascript:void();" onclick="toggle_visibility('foo_fl_salud');"> [Show/hide abstract]</a>
+                            </div>
+                           <p> </p>
+                           <p> </p>
+                             <div id="foo_fl_salud" style="display:none"> <div align="justify"> We investigate the potential impact of the diffusion of large language models on hiring discrimination by comparing the biases in AI-driven and human-driven resume screening. To do so, we reanalyze data from previous field experiments by reconstructing resumes and comparing human call-back rates with LLM-generated results. We find that LLMs exhibit significantly less racial bias than human decision-makers. However, LLMs are not perfectly unbiased. In a more stringent test, we fail to reject the null hypothesis that LLMs do not use information contained in names. </div></div>
+                             <p></p>
+                         </div>
+                       </div>                       
                   </div>
             </section>              
           
