--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <h2 class="mb-5">Job Market Paper</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><a href="jmp.pdf" target="_blank">Dinner at Your Door: How Delivery Platforms Affect Workers and Firms</a></h3>
+                            <h3 class="mb-0"><a href="Plotkin_2024_JMP_delivery_workers.pdf" target="_blank">Dinner at Your Door: How Delivery Platforms Affect Workers and Firms</a></h3>
                             <b>(Draft coming soon)</b>
                             <p style="margin:0;"> </p>
                             <div class="topnav"> <a href="javascript:void();" onclick="toggle_visibility('foo_flour');"> [Show/hide abstract]</a>
