--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@
                     <h2 class="mb-5">Job Market Paper</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><a href="JMP.pdf" target="_blank">Dinner at Your Door: How Delivery Platforms Affect Workers and Firms</a></h3>
-                            <b>(Draft coming soon)</b>
+                            <h3 class="mb-0"><a href="Plotkin_2024_JMP_delivery_workers.pdf" target="_blank">Dinner at Your Door: How Delivery Platforms Affect Workers and Firms</a></h3>
                             <p style="margin:0;"> </p>
                             <div class="topnav"> <a href="javascript:void();" onclick="toggle_visibility('foo_flour');"> [Show/hide abstract]</a>
                               <div id="foo_flour" style="display:none"> <div align="justify"> Online-delivery platforms are part of a recent wave of technologies that reshape workforce composition and demand for goods. While these platforms can provide new opportunities for workers with limited outside options, they may also replace ``good jobs''. This paper uses unique data linking employer-employee records with restaurants and workers from a major Brazilian delivery platform, along with a matched event-study design, to estimate the impact of platform adoption on labor market outcomes. Adopting restaurants, on average, replace waiters with outsourced platform workers one-to-one. Workers at adopting restaurants experience modest earnings losses, as most displaced employees find new formal sector jobs. In contrast, non-adopting restaurants tend to downsize or shut down, with their workers facing greater earnings losses due to increased displacement risks. However, the earnings gains for gig workers outweigh the losses faced by restaurant employees. These findings offer insights into the distributional effects and trade-offs of online-delivery platforms.</div></div>
@@ -262,7 +261,20 @@
                              <div id="foo_fl_salud" style="display:none"> <div align="justify"> We investigate the potential impact of the diffusion of large language models on hiring discrimination by comparing the biases in AI-driven and human-driven resume screening. To do so, we reanalyze data from previous field experiments by reconstructing resumes and comparing human call-back rates with LLM-generated results. We find that LLMs exhibit significantly less racial bias than human decision-makers. However, LLMs are not perfectly unbiased. In a more stringent test, we fail to reject the null hypothesis that LLMs do not use information contained in names. </div></div>
                              <p></p>
                          </div>
-                       </div>                       
+                       </div> 
+                       <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0"><a href="" target="_blank">Disempowered Unions, Collective Bargaining, and Wage Inequality</a></h3>
+                            <div class="subheading mb-0">with <a class="hlinknames" href="https://carlasrebot.github.io/" target="_blank">Carla Srebot</a></div>
+                            <p style="margin:0;"> </p>
+                             <div class="topnav"> <a href="javascript:void();" onclick="toggle_visibility('foo_fl_caspa');"> [Show/hide abstract]</a>
+                            </div>
+                           <p> </p>
+                           <p> </p>
+                             <div id="foo_fl_caspa" style="display:none"> <div align="justify"> We study the effects of deunionization–characterized by the weakening of labor unions–on firm compensation, labor inequality, and earning gaps. Specifically, we leverage a reform in Brazil that ended the automatic renewal of collective bargaining agreements (CBAs) upon their expiration, significantly curtailing the bargaining power of unions over wages and job amenities. Using a dataset on the universe of CBAs alongside an administrative linked employer-employee dataset, we estimate the causal effect of deunionization. Our approach compares firms with expired CBAs, where workers are no longer covered by a CBA, to those with active CBAs at the time of the reform’s implementation. We extend our analysis to explore the mechanisms through which deunionization affects wage and amenity distributions, applying textual analysis to the CBAs to explain changes in employee welfare. Additionally, the analysis examines the heterogeneity in the reform’s effects across different industries, occupations, and worker skill levels, aiming to uncover whether the reform widened inequality in earnings and employment amenities. </div></div>
+                             <p></p>
+                         </div>
+                       </div>                                              
                   </div>
             </section>              
           
