--- a/index.html
+++ b/index.html
@@ -154,20 +154,29 @@
 
 
             <hr class="m-0" />
-            <!-- Job Market Paper-->
-            <section class="resume-section" id="jmp">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Job Market Paper</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0"><a href="Plotkin_2024_JMP_delivery_workers.pdf" target="_blank">Dinner at Your Door: How Delivery Platforms Affect Workers and Firms</a></h3>
-                            <p style="margin:0;"> </p>
-                            <div class="topnav"> <a href="javascript:void();" onclick="toggle_visibility('foo_flour');"> [Show/hide abstract]</a>
-                              <div id="foo_flour" style="display:none"> <div align="justify">     Online-delivery platforms are part of a recent wave of technologies that reshape workforce composition and demand for goods. While these platforms can provide new opportunities for workers with limited outside options, they may also replace ``good jobs''. This paper uses unique data linking employer-employee records with restaurants and workers from a major Brazilian delivery platform, along with a matched event-study design, to estimate the impact of platform adoption on labor market outcomes. Adopting restaurants, on average, replace in-house labor hours with outsourced platform worker hours one-to-one. Workers at these restaurants experience modest earnings losses, as most displaced employees find new formal sector jobs. In contrast, non-adopting restaurants tend to downsize or shut down, with their workers facing greater earnings losses due to increased displacement risks. However, the earnings gains for gig workers outweigh the losses faced by restaurant employees. These findings offer insights into the distributional effects and trade-offs of online-delivery platforms.</div></div>
-                          .
+        <!-- Job Market Paper--> 
+        <section class="resume-section" id="jmp">
+          <div class="resume-section-content">
+              <h2 class="mb-5">Job Market Paper</h2>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <h3 class="mb-0"><a href="Plotkin_2024_JMP_delivery_workers.pdf" target="_blank">Dinner at Your Door: How Delivery Platforms Affect Workers and Firms</a></h3>
+                      <p style="margin:0;"> </p>
+                      <div class="topnav"></a></div>
+                        Awarded Canadian Labour Economics Forum (CLEF) Best Paper, 2025 
+                        <p style="margin:0;"> </p>
+                          <a href="javascript:void();" onclick="toggle_visibility('foo_flour');"> [Show/hide abstract]</a>
+                          <div id="foo_flour" style="display:none">
+                              <div align="justify">
+                                  Online-delivery platforms are part of a recent wave of technologies that reshape workforce composition and demand for goods. While these platforms can provide new opportunities for workers with limited outside options, they may also replace ``good jobs''. This paper uses unique data linking employer-employee records with restaurants and workers from a major Brazilian delivery platform, along with a matched event-study design, to estimate the impact of platform adoption on labor market outcomes. Adopting restaurants, on average, replace in-house labor hours with outsourced platform worker hours one-to-one. Workers at these restaurants experience modest earnings losses, as most displaced employees find new formal sector jobs. In contrast, non-adopting restaurants tend to downsize or shut down, with their workers facing greater earnings losses due to increased displacement risks. However, the earnings gains for gig workers outweigh the losses faced by restaurant employees. These findings offer insights into the distributional effects and trade-offs of online-delivery platforms.
+                              </div>
+                          </div>
                           <a href="https://blogs.worldbank.org/en/impactevaluations/winners-and-losers-in-the-gig-economy--what-delivery-platforms-m?CID=WBW_AL_BlogNotification_EN_EXT" target="_blank"> [WB Blog Post]</a>
-                        </div>
-            </section>  
+                      </div>
+                  </div>
+              </div>
+          </div>
+        </section> 
 
 
             <hr class="m-0" />
