--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   <p class="lead mb-5">I am a PhD candidate at the Vancouver School of Economics, University of British Columbia. My research interests are labor and development economics. Much of my research examines how alternative work arrangements affect inequality, workers and firms. You can find my CV <a href="Academic_CV_Pascuel_Plotkin.pdf" target="_blank">here.</a></p>
                   
                   <!-- New paragraph for job market availability -->
-                  <p style="font-size: 1.3em;"><b>I am available for interviews in the 2024/25 Job Market</b></p>
+                  <p style="font-size: 1.3em;">I will be a Postdoctoral Researcher at CEMFI during the 2025–2026 academic year, and in July 2026 I will join the Department of Markets, Public Policy & Law at Boston University as an Assistant Professor.</p>
                   
                   <div class="social-icons">
                       <a class="social-icon" href="https://twitter.com/mpplotkin" target="_blank"><i class="fab fa-twitter"></i></a>
