--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <meta name="google-site-verification" content="CMvDfI4Xts6MpV0tUmCwM0TNacTkrU4Wp6RkQuyuxyo" />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Webpage of Pascuel Plotkin. I am a PhD candidate at the Vancouver School of Economics, University of British Columbia. My research interests are labor and development economics. I am available for interviews in the 2024/25 job market">
-        <meta name="keywords" content="Miguel, Pascuel, Plotkin, Economics, UBC, University of British Columbia, Argentina, Econ, VSE, Vancouver School of Economics">
+        <meta name="description" content="Webpage of Pascuel Plotkin.">
+        <meta name="keywords" content="Miguel, Pascuel, Plotkin, Economics, UBC, University of British Columbia, CEMFI, Boston University, Canada, Questrom, Argentina, Econ, VSE, Vancouver School of Economics">
         <meta name="author" content="Pascuel Plotkin" />
         <title>Pascuel Plotkin</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
@@ -138,10 +138,10 @@
                       6000 iona drive · vancouver, bc v6t1l4 ·
                       <a href="mailto:pascuel1@student.ubc.ca">pascuel1@student.ubc.ca</a> | <a href="mailto:plotkin@cemfi.es">plotkin@cemfi.es</a>
                   </div>
-                  <p class="lead mb-5">I am a PhD candidate at the Vancouver School of Economics, University of British Columbia. My research interests are labor and development economics. Much of my research examines how alternative work arrangements affect inequality, workers and firms. You can find my CV <a href="Academic_CV_Pascuel_Plotkin.pdf" target="_blank">here.</a></p>
+                  <p class="lead mb-5">I am a Postdoctoral Researcher at CEMFI for the 2025-2026 academic year. In July 2026, I will join the Department of Markets, Public Policy & Law at Boston University as an Assistant Professor. I am also a Research Affiliate at <a href="https://www.rfberlin.com/">RF Berlin.</a></p>
                   
                   <!-- New paragraph for job market availability -->
-                  <p style="font-size: 1.3em;">I will be a Postdoctoral Researcher at CEMFI during the 2025–2026 academic year, and in July 2026 I will join the Department of Markets, Public Policy & Law at Boston University as an Assistant Professor.</p>
+                  <p class="lead mb-5">My research interests are labor and development economics. Much of my research examines how alternative work arrangements affect inequality, workers and firms. You can find my CV <a href="Academic_CV_Pascuel_Plotkin.pdf" target="_blank">here.</a></p>
                   
                   <div class="social-icons">
                       <a class="social-icon" href="https://twitter.com/mpplotkin" target="_blank"><i class="fab fa-twitter"></i></a>
