--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                   </h1>
                   <div class="subheading mb-5">
                       6000 iona drive · vancouver, bc v6t1l4 ·
-                      <a href="mailto:pascuel1@student.ubc.ca">pascuel1@student.ubc.ca</a> | <a href="mailto:plotkin@cemfi.es">plotkin@cemfi.es</a>
+                      <a href="mailto:plotkin@cemfi.es">plotkin@cemfi.es</a>
                   </div>
                   <p class="lead mb-5">I am a Postdoctoral Researcher at CEMFI for the 2025-2026 academic year. In July 2026, I will join the Department of Markets, Public Policy & Law at Boston University as an Assistant Professor. I am also a Research Affiliate at <a href="https://www.rfberlin.com/">RF Berlin.</a></p>
                   
