--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
                       <h3 class="mb-0"><a href="Plotkin_2024_JMP_delivery_workers.pdf" target="_blank">Dinner at Your Door: How Delivery Platforms Affect Workers and Firms</a></h3>
                       <p style="margin:0;"> </p>
                       <div class="topnav"></a></div>
-                        Awarded Canadian Labour Economics Forum (CLEF) Best Paper, 2025 
+                        Canadian Labour Economics Forum (CLEF) Best Paper, 2025 <br>
+                        IDB Young Economist Award, 2025
                         <p style="margin:0;"> </p>
                           <a href="javascript:void();" onclick="toggle_visibility('foo_flour');"> [Show/hide abstract]</a>
                           <div id="foo_flour" style="display:none">
